spanish translations, few tweaks

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,7 +16,7 @@
     "home": "Home"
   },
   "new": {
-    "title": "New Project",
+    "title": "Create A New Project",
     "project_title": "Project Title",
     "description": "Description",
     "start_date": "Project Start Date",
