--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -12,7 +12,7 @@
     "welcome": "Bienvenido!"
   },
   "new": {
-    "title": "Nuevo Proyecto",
+    "title": "Crear Un Nuevo Proyecto",
     "project_title": "Título del Proyecto",
     "description": "Descripción",
     "start_date": "Fecha de inicio",
