--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "complete": "complete",
+  "incomplete": "incomplete",
   "auth": {
     "agree": "I agree to",
     "alreadyJoined": "Already joined?",
