--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,4 +1,6 @@
 {
+  "complete": "completo",
+  "incomplete": "incompleto",
   "auth": {
     "agree": "Acepto",
     "alreadyJoined": "Ya tienes una cuenta?",
