--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -237,6 +237,7 @@
     "profile": "Mi Perfil",
     "logout": "Cerrar Sesión",
     "firstname": "Nombre de Pila",
-    "lastname": "Apellido"
+    "lastname": "Apellido",
+    "username": "Usuario"
   }
 }
